--- a/rem-aya-2/pom.xml
+++ b/rem-aya-2/pom.xml
@@ -14,6 +14,7 @@
 	<name>rem-aya-2</name>
 	<properties>
 		<java.version>21</java.version>
+		<modelmapper.version>3.2.0</modelmapper.version>
 	</properties>
 	
 	<dependencies>
@@ -21,6 +22,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -30,8 +36,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${modelmapper.version}</version>
 		</dependency>
 		
 		<dependency>
