--- a/rem-aya-2/src/main/resources/application.yml
+++ b/rem-aya-2/src/main/resources/application.yml
@@ -5,9 +5,10 @@ spring:
     username: root
     password: admin123
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+    #properties:
+      #hibernate:
+        #dialect: org.hibernate.dialect.MySQLDialect
     show-sql: false
