--- a/rem-aya-2/src/main/resources/application.yml
+++ b/rem-aya-2/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     url: jdbc:mysql://localhost:3306/rem_aya_2?useTimezone=true&serverTimezone=UTC
     username: root
     password: admin123
+  profiles:
+    active: development
   jpa:
     open-in-view: false
     hibernate:
