--- a/rem_aya_2/src/main/resources/application.yml
+++ b/rem_aya_2/src/main/resources/application.yml
@@ -9,8 +9,10 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     #properties:
       #hibernate:
         #dialect: org.hibernate.dialect.MySQLDialect
     show-sql: false
+  flyway:
+    enabled: true
