--- a/rem_aya_2/pom.xml
+++ b/rem_aya_2/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<modelmapper.version>3.2.0</modelmapper.version>
+		<springdoc.version>2.0.2</springdoc.version>
 	</properties>
 	
 	<dependencies>
@@ -36,7 +37,13 @@
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 
 		<dependency>
@@ -80,6 +87,12 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
 		</dependency>
 		
