validate Swagger UI Page with Test Containers and Rest Assured

--- a/rem_aya_2/src/test/resources/application.yml
+++ b/rem_aya_2/src/test/resources/application.yml
@@ -1,13 +1,11 @@
+server:
+  port: 8888
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/rem_aya_2?useTimezone=true&serverTimezone=UTC
-    username: root
-    password: admin123
   profiles:
     active: development
   jpa:
-    open-in-view: false
     hibernate:
       ddl-auto: none
     #properties:
