--- a/rem_aya_2/src/main/resources/application.yml
+++ b/rem_aya_2/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+cors:
+  originPatterns: http://localhost:3000,http://localhost:8080,https://github.com/do5-5anto5
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
