--- a/rem_aya_2/pom.xml
+++ b/rem_aya_2/pom.xml
@@ -16,6 +16,7 @@
 		<java.version>21</java.version>
 		<modelmapper.version>3.2.0</modelmapper.version>
 		<springdoc.version>2.0.2</springdoc.version>
+		<java-jwt.version>3.18.3</java-jwt.version>
 	</properties>
 	
 	<dependencies>
@@ -28,6 +29,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>${java-jwt.version}</version>
 		</dependency>
 		
 		<dependency>
