--- a/rem_aya_2/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/rem_aya_2/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,17 @@
-{"properties": [{
-  "name": "cors.origin-patterns",
-  "type": "java.lang.String",
-  "description": "Necessary to accept/enable Cross Origin Resource Sharing'"
-}]}
+{"properties": [
+  {
+    "name": "cors.origin-patterns",
+    "type": "java.lang.String",
+    "description": "Necessary to accept/enable Cross Origin Resource Sharing'"
+  },
+  {
+    "name": "security.jwt.token.secret-key",
+    "type": "java.lang.String",
+    "description": "athentication's secret key"
+  },
+  {
+    "name": "security.jwt.token.expire-length",
+    "type": "java.lang.String",
+    "description": "time for authentication expirate"
+  }
+]}
