--- a/rem_aya_2/src/test/resources/application.yml
+++ b/rem_aya_2/src/test/resources/application.yml
@@ -22,6 +22,8 @@ spring:
   flyway:
     enabled: true
 springdoc:
-  pathsToMatch: /api/**/v1/**
+  pathsToMatch: 
+    - /auth/**
+    - /api/**/v1/**
   swagger-ui:
     use-root-path: true
