populate table plant with many by migrations ; shorting PlantService code

--- a/rem_aya_2/src/main/resources/application.yml
+++ b/rem_aya_2/src/main/resources/application.yml
@@ -19,8 +19,8 @@ spring:
       #hibernate:
         #dialect: org.hibernate.dialect.MySQLDialect
     show-sql: false
-  #flyway:
-    #enabled: true
+  flyway:
+    enabled: true
 springdoc:
   pathsToMatch:
     - /auth/**
