File Storage structure (VO, config, controler, service and exceptions)

--- a/rem_aya_2/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/rem_aya_2/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,10 @@
     "name": "security.jwt.token.expire-length",
     "type": "java.lang.String",
     "description": "time for authentication expirate"
-  } 
+  },
+  {
+    "name": "file.upload-dir",
+    "type": "java.lang.String",
+    "description": "defines a directory for uploads"
+  }
 ]}
