--- a/rem_aya_2/src/main/resources/application.yml
+++ b/rem_aya_2/src/main/resources/application.yml
@@ -1,7 +1,9 @@
+server:
+  port: 80
 cors:
   originPatterns: http://localhost:3000,http://localhost:8080,https://github.com/do5-5anto5
 file:
-  upload-dir: /Code/UploadDir
+  upload-dir: /home/runner/work/rem_aya_2/UploadDir
 security:
   jwt:
     token:
