--- a/rem_aya_2/src/test/resources/application.yml
+++ b/rem_aya_2/src/test/resources/application.yml
@@ -3,7 +3,7 @@ server:
 cors:
   originPatterns: http://localhost:3000,http://localhost:8080,https://github.com/do5-5anto5
 file:
-  upload-dir: /Code/UploadDir
+  upload-dir: /home/runner/work/rem-aya-2/UploadDir
 security:
   jwt:
     token:
